added google maps witb npm google-map-react

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEzwv-Gvt2xwKezzoZgcyqoNXSIYl4DjE"></script>
+    <!-- Note you can add scopes along with the specific api version with the following configuration -->
+      <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.27&libraries=places,geometry&key=AIzaSyDEzwv-Gvt2xwKezzoZgcyqoNXSIYl4DjE"></script> -->
     <title>Jobs</title>
   </head>
   <body>
@@ -16,6 +19,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-
+    <!-- <div id="map"></div> -->
   </body>
 </html>
